--- a/src/ui/AppLayout/AppLayout.module.scss
+++ b/src/ui/AppLayout/AppLayout.module.scss
@@ -1,4 +1,11 @@
-.outlet__container {
+.top {
+  display: grid;
+  grid-template-columns: 26rem 1fr;
+  grid-template-rows: auto 1fr;
+  height: 100vh;
+}
+
+.outlet {
   background-color: green;
   // top: 4rem left/right : 4.8rem bottom: 6.4rem
   padding: 4rem 4.8rem 6.4rem;
