--- a/src/ui/Sidebar/Sidebar.module.scss
+++ b/src/ui/Sidebar/Sidebar.module.scss
@@ -1,5 +1,6 @@
-.container {
-  background-color: aliceblue;
+.top {
+  background-color: var(--color-grey-100);
   padding: 3.2rem 2.4rem;
   border-right: 1px solid variables.$grey-color;
+  grid-row: 1 / -1;
 }
