--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -52,3 +52,22 @@
   --image-grayscale: 0;
   --image-opacity: 100%;
 }
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.5;
+  min-height: 100vh;
+  font-size: 1.6rem;
+}
