--- a/src/ui/AppLayout/AppLayout.module.scss
+++ b/src/ui/AppLayout/AppLayout.module.scss
@@ -5,8 +5,16 @@
   height: 100vh;
 }
 
-.outlet {
-  background-color: green;
+.main {
+  background-color: var(--color-grey-50);
   // top: 4rem left/right : 4.8rem bottom: 6.4rem
   padding: 4rem 4.8rem 6.4rem;
+}
+
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
 }
