--- a/src/ui/Sidebar/Sidebar.module.scss
+++ b/src/ui/Sidebar/Sidebar.module.scss
@@ -3,4 +3,8 @@
   padding: 3.2rem 2.4rem;
   border-right: 1px solid variables.$grey-color;
   grid-row: 1 / -1;
+
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
 }
