supabase create, delete and update hooks are added

--- a/src/features/cabins/CabinRow.module.scss
+++ b/src/features/cabins/CabinRow.module.scss
@@ -1,6 +1,6 @@
 .row {
   display: grid;
-  grid-template-columns: 0.6fr 1.8fr 2.2fr 1fr 1fr 1fr;
+  grid-template-columns: 0.6fr 1.8fr 2.2fr 1fr 1fr 1fr 1fr;
   column-gap: 2.4rem;
   padding: 1.6rem 2.4rem;
 
