--- a/src/ui/FormRow/FormRow.module.scss
+++ b/src/ui/FormRow/FormRow.module.scss
@@ -1,6 +1,6 @@
 .form_row {
   display: grid;
-  grid-template-columns: 24rem 1fr;
+  grid-template-columns: 24rem 2fr 1fr;
   align-items: center;
   gap: 2.4rem;
   padding: 1.2rem 0;
