--- a/src/ui/AppLayout/AppLayout.module.scss
+++ b/src/ui/AppLayout/AppLayout.module.scss
@@ -9,6 +9,7 @@
   background-color: var(--color-grey-50);
   // top: 4rem left/right : 4.8rem bottom: 6.4rem
   padding: 4rem 4.8rem 6.4rem;
+  overflow: scroll;
 }
 
 .container {
